	* added torrent_info::remap_files()
	* support min_interval tracker extension
	* added session saving and loading functions
	* added support for min-interval in tracker responses
	* only keeps one outstanding duplicate request per peer
	  reduces waste download, specifically when streaming
	* added support for storing per-peer rate limits across reconnects
	* improved fallocate support

	* disabled feature to drop requests after having been skipped too many times
	* fixed range request bug for files larger than 2 GB in web seeds

release 0.14.8

	* ignore unkown metadata messages
	* fixed typo that would sometimes prevent queued torrents to be checked
	* fixed bug in auto-manager where active_downloads and active_seeds would
	  sometimes be used incorrectly
	* force_recheck() no longer crashes on torrents with no metadata
	* fixed broadcast socket regression from 0.14.7
	* fixed hang in NATPMP when shut down while waiting for a response
	* fixed some more error handling in bdecode

release 0.14.7

	* fixed deadlock in natpmp
	* resume data alerts are always posted, regardless of alert mask
	* added wait_for_alert to python binding
	* improved invalid filename character replacement
	* improved forward compatibility in DHT
	* added set_piece_hashes that takes a callback to the python binding
	* fixed division by zero in get_peer_info()
	* fixed bug where pieces may have been requested before the metadata
	  was received
	* fixed incorrect error when deleting files from a torrent where
	  not all files have been created
	* announces torrents immediately to the DHT when it's started
	* fixed bug in add_files that would fail to recurse if the path
	  ended with a /
	* fixed bug in error handling when parsing torrent files
	* fixed file checking bug when renaming a file before checking the torrent
	* fixed race conditon when receiving metadata from swarm
	* fixed assert in ut_metadata plugin
	* back-ported some fixes for building with no exceptions