@@ -94,6 +94,7 @@
 	  reduces waste download, specifically when streaming
 	* added support for storing per-peer rate limits across reconnects
 	* improved fallocate support
+	* fixed magnet link issue when using resume data
 
 	* disabled feature to drop requests after having been skipped too many times
 	* fixed range request bug for files larger than 2 GB in web seeds
